[package]
name = "kiiwm"
version = "0.1.0"
authors = ["Kathrine 'kiinyo' Lemet <iiyoheki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dirs = "3.0.1"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
